Cadastro facial obrigatório, adicionar modalidade após cadastro e correção do lembrete de mensalidade
